--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,11 @@
 {
   "name": "bootstrap-less",
-  "version": "3.2.0",
+  "version": "3.3.0",
   "main": "less/bootstrap.less",
   "ignore": [
     "**/.*",
     "node_modules",
-    "components"
+    "components",
+    "*.sublime-project"
   ]
 }
